--- a/python basic/01.html
+++ b/python basic/01.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>01</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -4691,108 +4692,6 @@
       .navbar-default .btn-link {
         color: #777;
       }
-      .navbar-default .btn-link:hover,
-      .navbar-default .btn-link:focus {
-        color: #333;
-      }
-      .navbar-default .btn-link[disabled]:hover,
-      fieldset[disabled] .navbar-default .btn-link:hover,
-      .navbar-default .btn-link[disabled]:focus,
-      fieldset[disabled] .navbar-default .btn-link:focus {
-        color: #ccc;
-      }
-      .navbar-inverse {
-        background-color: #222;
-        border-color: #080808;
-      }
-      .navbar-inverse .navbar-brand {
-        color: #9d9d9d;
-      }
-      .navbar-inverse .navbar-brand:hover,
-      .navbar-inverse .navbar-brand:focus {
-        color: #fff;
-        background-color: transparent;
-      }
-      .navbar-inverse .navbar-text {
-        color: #9d9d9d;
-      }
-      .navbar-inverse .navbar-nav > li > a {
-        color: #9d9d9d;
-      }
-      .navbar-inverse .navbar-nav > li > a:hover,
-      .navbar-inverse .navbar-nav > li > a:focus {
-        color: #fff;
-        background-color: transparent;
-      }
-      .navbar-inverse .navbar-nav > .active > a,
-      .navbar-inverse .navbar-nav > .active > a:hover,
-      .navbar-inverse .navbar-nav > .active > a:focus {
-        color: #fff;
-        background-color: #080808;
-      }
-      .navbar-inverse .navbar-nav > .disabled > a,
-      .navbar-inverse .navbar-nav > .disabled > a:hover,
-      .navbar-inverse .navbar-nav > .disabled > a:focus {
-        color: #444;
-        background-color: transparent;
-      }
-      .navbar-inverse .navbar-toggle {
-        border-color: #333;
-      }
-      .navbar-inverse .navbar-toggle:hover,
-      .navbar-inverse .navbar-toggle:focus {
-        background-color: #333;
-      }
-      .navbar-inverse .navbar-toggle .icon-bar {
-        background-color: #fff;
-      }
-      .navbar-inverse .navbar-collapse,
-      .navbar-inverse .navbar-form {
-        border-color: #101010;
-      }
-      .navbar-inverse .navbar-nav > .open > a,
-      .navbar-inverse .navbar-nav > .open > a:hover,
-      .navbar-inverse .navbar-nav > .open > a:focus {
-        background-color: #080808;
-        color: #fff;
-      }
-      @media (max-width: 540px) {
-        .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
-          border-color: #080808;
-        }
-        .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
-          background-color: #080808;
-        }
-        .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
-          color: #9d9d9d;
-        }
-        .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
-        .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
-          color: #fff;
-          background-color: transparent;
-        }
-        .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
-        .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
-        .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
-          color: #fff;
-          background-color: #080808;
-        }
-        .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
-        .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
-        .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:focus {
-          color: #444;
-          background-color: transparent;
-        }
-      }
-      .navbar-inverse .navbar-link {
-        color: #9d9d9d;
-      }
-      .navbar-inverse .navbar-link:hover {
-        color: #fff;
-      }
-      .navbar-inverse .btn-link {
-        color: #9d9d9d;
-      }
       .navbar-inverse .btn-link:hover,
       .navbar-inverse .btn-link:focus {
         color: #fff;
@@ -8748,50 +8647,6 @@
       }
       .fa-circle-o-notch:before {
         content: "\f1ce";
-      }
-      .fa-ra:before,
-      .fa-rebel:before {
-        content: "\f1d0";
-      }
-      .fa-ge:before,
-      .fa-empire:before {
-        content: "\f1d1";
-      }
-      .fa-git-square:before {
-        content: "\f1d2";
-      }
-      .fa-git:before {
-        content: "\f1d3";
-      }
-      .fa-hacker-news:before {
-        content: "\f1d4";
-      }
-      .fa-tencent-weibo:before {
-        content: "\f1d5";
-      }
-      .fa-qq:before {
-        content: "\f1d6";
-      }
-      .fa-wechat:before,
-      .fa-weixin:before {
-        content: "\f1d7";
-      }
-      .fa-send:before,
-      .fa-paper-plane:before {
-        content: "\f1d8";
-      }
-      .fa-send-o:before,
-      .fa-paper-plane-o:before {
-        content: "\f1d9";
-      }
-      .fa-history:before {
-        content: "\f1da";
-      }
-      .fa-circle-thin:before {
-        content: "\f1db";
-      }
-      .fa-header:before {
-        content: "\f1dc";
       }
       .fa-paragraph:before {
         content: "\f1dd";
